--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=2.5.94");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.5.94") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.5.94") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.5.94") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.5.94") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.5.94#materialdesigniconsregular") format("svg");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=2.6.95");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=2.6.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=2.6.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=2.6.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=2.6.95") format("truetype"), url("../fonts/materialdesignicons-webfont.svg?v=2.6.95#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -405,10 +405,6 @@
   content: "\F614";
 }
 
-.mdi-approval:before {
-  content: "\F790";
-}
-
 .mdi-apps:before {
   content: "\F03B";
 }
@@ -781,6 +777,10 @@
   content: "\F802";
 }
 
+.mdi-aspect-ratio:before {
+  content: "\FA23";
+}
+
 .mdi-assistant:before {
   content: "\F064";
 }
@@ -841,6 +841,10 @@
   content: "\F804";
 }
 
+.mdi-babel:before {
+  content: "\FA24";
+}
+
 .mdi-baby:before {
   content: "\F06C";
 }
@@ -865,6 +869,10 @@
   content: "\F850";
 }
 
+.mdi-balloon:before {
+  content: "\FA25";
+}
+
 .mdi-ballot:before {
   content: "\F9C8";
 }
@@ -879,6 +887,18 @@
 
 .mdi-bank:before {
   content: "\F070";
+}
+
+.mdi-bank-transfer:before {
+  content: "\FA26";
+}
+
+.mdi-bank-transfer-in:before {
+  content: "\FA27";
+}
+
+.mdi-bank-transfer-out:before {
+  content: "\FA28";
 }
 
 .mdi-barcode:before {
@@ -1529,8 +1549,24 @@
   content: "\F0D8";
 }
 
+.mdi-briefcase-minus:before {
+  content: "\FA29";
+}
+
 .mdi-briefcase-outline:before {
   content: "\F813";
+}
+
+.mdi-briefcase-plus:before {
+  content: "\FA2A";
+}
+
+.mdi-briefcase-remove:before {
+  content: "\FA2B";
+}
+
+.mdi-briefcase-search:before {
+  content: "\FA2C";
 }
 
 .mdi-briefcase-upload:before {
@@ -1587,6 +1623,18 @@
 
 .mdi-bug:before {
   content: "\F0E4";
+}
+
+.mdi-bug-check:before {
+  content: "\FA2D";
+}
+
+.mdi-bug-check-outline:before {
+  content: "\FA2E";
+}
+
+.mdi-bug-outline:before {
+  content: "\FA2F";
 }
 
 .mdi-bulletin-board:before {
@@ -1657,6 +1705,10 @@
   content: "\F0ED";
 }
 
+.mdi-calendar-alert:before {
+  content: "\FA30";
+}
+
 .mdi-calendar-blank:before {
   content: "\F0EE";
 }
@@ -1683,6 +1735,10 @@
 
 .mdi-calendar-multiple-check:before {
   content: "\F0F2";
+}
+
+.mdi-calendar-multiselect:before {
+  content: "\FA31";
 }
 
 .mdi-calendar-plus:before {
@@ -1715,6 +1771,14 @@
 
 .mdi-calendar-today:before {
   content: "\F0F6";
+}
+
+.mdi-calendar-week:before {
+  content: "\FA32";
+}
+
+.mdi-calendar-week-begin:before {
+  content: "\FA33";
 }
 
 .mdi-call-made:before {
@@ -2049,6 +2113,10 @@
   content: "\F94F";
 }
 
+.mdi-cellphone-screenshot:before {
+  content: "\FA34";
+}
+
 .mdi-cellphone-settings:before {
   content: "\F123";
 }
@@ -2155,6 +2223,10 @@
 
 .mdi-check-circle-outline:before {
   content: "\F5E1";
+}
+
+.mdi-check-decagram:before {
+  content: "\F790";
 }
 
 .mdi-check-outline:before {
@@ -2377,6 +2449,14 @@
   content: "\F146";
 }
 
+.mdi-city-variant:before {
+  content: "\FA35";
+}
+
+.mdi-city-variant-outline:before {
+  content: "\FA36";
+}
+
 .mdi-clipboard:before {
   content: "\F147";
 }
@@ -2427,6 +2507,10 @@
 
 .mdi-clipboard-text:before {
   content: "\F14E";
+}
+
+.mdi-clipboard-text-outline:before {
+  content: "\FA37";
 }
 
 .mdi-clippy:before {
@@ -2547,6 +2631,10 @@
 
 .mdi-cloud-print-outline:before {
   content: "\F166";
+}
+
+.mdi-cloud-question:before {
+  content: "\FA38";
 }
 
 .mdi-cloud-search:before {
@@ -2709,6 +2797,14 @@
   content: "\F180";
 }
 
+.mdi-comment-eye:before {
+  content: "\FA39";
+}
+
+.mdi-comment-eye-outline:before {
+  content: "\FA3A";
+}
+
 .mdi-comment-multiple:before {
   content: "\F85E";
 }
@@ -2751,6 +2847,14 @@
 
 .mdi-comment-remove-outline:before {
   content: "\F187";
+}
+
+.mdi-comment-search:before {
+  content: "\FA3B";
+}
+
+.mdi-comment-search-outline:before {
+  content: "\FA3C";
 }
 
 .mdi-comment-text:before {
@@ -2799,6 +2903,18 @@
 
 .mdi-contacts:before {
   content: "\F6CA";
+}
+
+.mdi-contain:before {
+  content: "\FA3D";
+}
+
+.mdi-contain-end:before {
+  content: "\FA3E";
+}
+
+.mdi-contain-start:before {
+  content: "\FA3F";
 }
 
 .mdi-content-copy:before {
@@ -3325,6 +3441,10 @@
   content: "\F1D5";
 }
 
+.mdi-dlna:before {
+  content: "\FA40";
+}
+
 .mdi-dna:before {
   content: "\F683";
 }
@@ -3343,6 +3463,18 @@
 
 .mdi-docker:before {
   content: "\F867";
+}
+
+.mdi-doctor:before {
+  content: "\FA41";
+}
+
+.mdi-dog:before {
+  content: "\FA42";
+}
+
+.mdi-dog-side:before {
+  content: "\FA43";
 }
 
 .mdi-dolby:before {
@@ -3455,6 +3587,10 @@
 
 .mdi-ear-hearing:before {
   content: "\F7C4";
+}
+
+.mdi-ear-hearing-off:before {
+  content: "\FA44";
 }
 
 .mdi-earth:before {
@@ -3593,6 +3729,14 @@
   content: "\F1FA";
 }
 
+.mdi-engine-off:before {
+  content: "\FA45";
+}
+
+.mdi-engine-off-outline:before {
+  content: "\FA46";
+}
+
 .mdi-engine-outline:before {
   content: "\F1FB";
 }
@@ -3651,6 +3795,10 @@
 
 .mdi-exclamation:before {
   content: "\F205";
+}
+
+.mdi-exit-run:before {
+  content: "\FA47";
 }
 
 .mdi-exit-to-app:before {
@@ -3757,6 +3905,14 @@
   content: "\F6D2";
 }
 
+.mdi-feature-search:before {
+  content: "\FA48";
+}
+
+.mdi-feature-search-outline:before {
+  content: "\FA49";
+}
+
 .mdi-fedora:before {
   content: "\F8DA";
 }
@@ -3771,6 +3927,14 @@
 
 .mdi-file-account:before {
   content: "\F73A";
+}
+
+.mdi-file-alert:before {
+  content: "\FA4A";
+}
+
+.mdi-file-alert-outline:before {
+  content: "\FA4B";
 }
 
 .mdi-file-chart:before {
@@ -3907,6 +4071,14 @@
 
 .mdi-file-undo:before {
   content: "\F8DB";
+}
+
+.mdi-file-upload:before {
+  content: "\FA4C";
+}
+
+.mdi-file-upload-outline:before {
+  content: "\FA4D";
 }
 
 .mdi-file-video:before {
@@ -4989,8 +5161,36 @@
   content: "\F8E9";
 }
 
+.mdi-hand:before {
+  content: "\FA4E";
+}
+
+.mdi-hand-okay:before {
+  content: "\FA4F";
+}
+
+.mdi-hand-peace:before {
+  content: "\FA50";
+}
+
+.mdi-hand-peace-variant:before {
+  content: "\FA51";
+}
+
+.mdi-hand-pointing-down:before {
+  content: "\FA52";
+}
+
+.mdi-hand-pointing-left:before {
+  content: "\FA53";
+}
+
 .mdi-hand-pointing-right:before {
   content: "\F2C7";
+}
+
+.mdi-hand-pointing-up:before {
+  content: "\FA54";
 }
 
 .mdi-hanger:before {
@@ -5071,6 +5271,14 @@
 
 .mdi-heart-half-outline:before {
   content: "\F6DF";
+}
+
+.mdi-heart-multiple:before {
+  content: "\FA55";
+}
+
+.mdi-heart-multiple-outline:before {
+  content: "\FA56";
 }
 
 .mdi-heart-off:before {
@@ -5225,6 +5433,10 @@
   content: "\F2DF";
 }
 
+.mdi-horseshoe:before {
+  content: "\FA57";
+}
+
 .mdi-hospital:before {
   content: "\F2E0";
 }
@@ -5269,6 +5481,18 @@
   content: "\F649";
 }
 
+.mdi-human-female-boy:before {
+  content: "\FA58";
+}
+
+.mdi-human-female-female:before {
+  content: "\FA59";
+}
+
+.mdi-human-female-girl:before {
+  content: "\FA5A";
+}
+
 .mdi-human-greeting:before {
   content: "\F64A";
 }
@@ -5285,8 +5509,20 @@
   content: "\F64D";
 }
 
+.mdi-human-male-boy:before {
+  content: "\FA5B";
+}
+
 .mdi-human-male-female:before {
   content: "\F2E8";
+}
+
+.mdi-human-male-girl:before {
+  content: "\FA5C";
+}
+
+.mdi-human-male-male:before {
+  content: "\FA5D";
 }
 
 .mdi-human-pregnant:before {
@@ -5447,6 +5683,14 @@
 
 .mdi-invert-colors:before {
   content: "\F301";
+}
+
+.mdi-ip:before {
+  content: "\FA5E";
+}
+
+.mdi-ip-network:before {
+  content: "\FA5F";
 }
 
 .mdi-islam:before {
@@ -5845,6 +6089,10 @@
   content: "\F8EC";
 }
 
+.mdi-litecoin:before {
+  content: "\FA60";
+}
+
 .mdi-loading:before {
   content: "\F771";
 }
@@ -5953,12 +6201,20 @@
   content: "\F34A";
 }
 
+.mdi-magnify-minus-cursor:before {
+  content: "\FA61";
+}
+
 .mdi-magnify-minus-outline:before {
   content: "\F6EB";
 }
 
 .mdi-magnify-plus:before {
   content: "\F34B";
+}
+
+.mdi-magnify-plus-cursor:before {
+  content: "\FA62";
 }
 
 .mdi-magnify-plus-outline:before {
@@ -6115,6 +6371,14 @@
 
 .mdi-menu-right-outline:before {
   content: "\FA02";
+}
+
+.mdi-menu-swap:before {
+  content: "\FA63";
+}
+
+.mdi-menu-swap-outline:before {
+  content: "\FA64";
 }
 
 .mdi-menu-up:before {
@@ -7549,6 +7813,10 @@
   content: "\F431";
 }
 
+.mdi-puzzle-outline:before {
+  content: "\FA65";
+}
+
 .mdi-qi:before {
   content: "\F998";
 }
@@ -7709,6 +7977,10 @@
   content: "\F451";
 }
 
+.mdi-registered-trademark:before {
+  content: "\FA66";
+}
+
 .mdi-relative-scale:before {
   content: "\F452";
 }
@@ -7767,6 +8039,10 @@
 
 .mdi-reproduction:before {
   content: "\F45C";
+}
+
+.mdi-resize:before {
+  content: "\FA67";
 }
 
 .mdi-resize-bottom-right:before {
@@ -7881,6 +8157,10 @@
   content: "\F469";
 }
 
+.mdi-router-wireless-settings:before {
+  content: "\FA68";
+}
+
 .mdi-routes:before {
   content: "\F46A";
 }
@@ -7907,6 +8187,10 @@
 
 .mdi-run-fast:before {
   content: "\F46E";
+}
+
+.mdi-safe:before {
+  content: "\FA69";
 }
 
 .mdi-sale:before {
@@ -7963,6 +8247,10 @@
 
 .mdi-school:before {
   content: "\F474";
+}
+
+.mdi-scissor-cutting:before {
+  content: "\FA6A";
 }
 
 .mdi-screen-rotation:before {
@@ -8065,6 +8353,10 @@
   content: "\F486";
 }
 
+.mdi-select-drag:before {
+  content: "\FA6B";
+}
+
 .mdi-select-inverse:before {
   content: "\F487";
 }
@@ -8075,6 +8367,10 @@
 
 .mdi-selection:before {
   content: "\F489";
+}
+
+.mdi-selection-drag:before {
+  content: "\FA6C";
 }
 
 .mdi-selection-off:before {
@@ -8167,6 +8463,10 @@
 
 .mdi-settings-box:before {
   content: "\F494";
+}
+
+.mdi-settings-helper:before {
+  content: "\FA6D";
 }
 
 .mdi-settings-outline:before {
@@ -8305,6 +8605,10 @@
   content: "\F713";
 }
 
+.mdi-signal-5g:before {
+  content: "\FA6E";
+}
+
 .mdi-signal-cellular-1:before {
   content: "\F8BB";
 }
@@ -8343,6 +8647,10 @@
 
 .mdi-silverware-fork:before {
   content: "\F4A4";
+}
+
+.mdi-silverware-fork-knife:before {
+  content: "\FA6F";
 }
 
 .mdi-silverware-spoon:before {
@@ -8429,6 +8737,10 @@
   content: "\F4B3";
 }
 
+.mdi-smog:before {
+  content: "\FA70";
+}
+
 .mdi-smoke-detector:before {
   content: "\F392";
 }
@@ -8463,6 +8775,10 @@
 
 .mdi-sofa:before {
   content: "\F4B9";
+}
+
+.mdi-solar-power:before {
+  content: "\FA71";
 }
 
 .mdi-solid:before {
@@ -8651,6 +8967,14 @@
 
 .mdi-star:before {
   content: "\F4CE";
+}
+
+.mdi-star-box:before {
+  content: "\FA72";
+}
+
+.mdi-star-box-outline:before {
+  content: "\FA73";
 }
 
 .mdi-star-circle:before {
@@ -8905,6 +9229,14 @@
   content: "\F835";
 }
 
+.mdi-table-plus:before {
+  content: "\FA74";
+}
+
+.mdi-table-remove:before {
+  content: "\FA75";
+}
+
 .mdi-table-row:before {
   content: "\F836";
 }
@@ -8991,6 +9323,10 @@
 
 .mdi-target:before {
   content: "\F4FE";
+}
+
+.mdi-target-variant:before {
+  content: "\FA76";
 }
 
 .mdi-taxi:before {
@@ -9317,6 +9653,10 @@
   content: "\F891";
 }
 
+.mdi-trademark:before {
+  content: "\FA77";
+}
+
 .mdi-traffic-light:before {
   content: "\F52B";
 }
@@ -9359,6 +9699,14 @@
 
 .mdi-translate:before {
   content: "\F5CA";
+}
+
+.mdi-trash-can:before {
+  content: "\FA78";
+}
+
+.mdi-trash-can-outline:before {
+  content: "\FA79";
 }
 
 .mdi-treasure-chest:before {
@@ -9430,10 +9778,18 @@
 }
 
 .mdi-tshirt-crew:before {
+  content: "\FA7A";
+}
+
+.mdi-tshirt-crew-outline:before {
   content: "\F53F";
 }
 
 .mdi-tshirt-v:before {
+  content: "\FA7B";
+}
+
+.mdi-tshirt-v-outline:before {
   content: "\F540";
 }
 
@@ -10391,6 +10747,54 @@
 
 .mdi-zip-disk:before {
   content: "\FA22";
+}
+
+.mdi-zodiac-aquarius:before {
+  content: "\FA7C";
+}
+
+.mdi-zodiac-aries:before {
+  content: "\FA7D";
+}
+
+.mdi-zodiac-cancer:before {
+  content: "\FA7E";
+}
+
+.mdi-zodiac-capricorn:before {
+  content: "\FA7F";
+}
+
+.mdi-zodiac-gemini:before {
+  content: "\FA80";
+}
+
+.mdi-zodiac-leo:before {
+  content: "\FA81";
+}
+
+.mdi-zodiac-libra:before {
+  content: "\FA82";
+}
+
+.mdi-zodiac-pisces:before {
+  content: "\FA83";
+}
+
+.mdi-zodiac-sagittarius:before {
+  content: "\FA84";
+}
+
+.mdi-zodiac-scorpio:before {
+  content: "\FA85";
+}
+
+.mdi-zodiac-taurus:before {
+  content: "\FA86";
+}
+
+.mdi-zodiac-virgo:before {
+  content: "\FA87";
 }
 
 .mdi-blank:before {
