--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.5.94" !default;
+$mdi-version:          "2.6.95" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -105,7 +105,6 @@ $mdi-icons: (
     "apple-keyboard-shift": F636,
     "apple-safari": F039,
     "application": F614,
-    "approval": F790,
     "apps": F03B,
     "arch": F8C6,
     "archive": F03C,
@@ -199,6 +198,7 @@ $mdi-icons: (
     "arrow-up-drop-circle-outline": F063,
     "arrow-up-thick": F05E,
     "artist": F802,
+    "aspect-ratio": FA23,
     "assistant": F064,
     "asterisk": F6C3,
     "at": F065,
@@ -214,16 +214,21 @@ $mdi-icons: (
     "av-timer": F06B,
     "axe": F8C7,
     "azure": F804,
+    "babel": FA24,
     "baby": F06C,
     "baby-buggy": F68E,
     "backburger": F06D,
     "backspace": F06E,
     "backup-restore": F06F,
     "badminton": F850,
+    "balloon": FA25,
     "ballot": F9C8,
     "ballot-outline": F9C9,
     "bandcamp": F674,
     "bank": F070,
+    "bank-transfer": FA26,
+    "bank-transfer-in": FA27,
+    "bank-transfer-out": FA28,
     "barcode": F071,
     "barcode-scan": F072,
     "barley": F073,
@@ -386,7 +391,11 @@ $mdi-icons: (
     "briefcase": F0D6,
     "briefcase-check": F0D7,
     "briefcase-download": F0D8,
+    "briefcase-minus": FA29,
     "briefcase-outline": F813,
+    "briefcase-plus": FA2A,
+    "briefcase-remove": FA2B,
+    "briefcase-search": FA2C,
     "briefcase-upload": F0D9,
     "brightness-1": F0DA,
     "brightness-2": F0DB,
@@ -401,6 +410,9 @@ $mdi-icons: (
     "buddhism": F94A,
     "buffer": F619,
     "bug": F0E4,
+    "bug-check": FA2D,
+    "bug-check-outline": FA2E,
+    "bug-outline": FA2F,
     "bulletin-board": F0E5,
     "bullhorn": F0E6,
     "bullseye": F5DD,
@@ -418,6 +430,7 @@ $mdi-icons: (
     "cake-variant": F0EB,
     "calculator": F0EC,
     "calendar": F0ED,
+    "calendar-alert": FA30,
     "calendar-blank": F0EE,
     "calendar-check": F0EF,
     "calendar-clock": F0F0,
@@ -425,6 +438,7 @@ $mdi-icons: (
     "calendar-heart": F9D1,
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
+    "calendar-multiselect": FA31,
     "calendar-plus": F0F3,
     "calendar-question": F691,
     "calendar-range": F678,
@@ -433,6 +447,8 @@ $mdi-icons: (
     "calendar-star": F9D2,
     "calendar-text": F0F5,
     "calendar-today": F0F6,
+    "calendar-week": FA32,
+    "calendar-week-begin": FA33,
     "call-made": F0F7,
     "call-merge": F0F8,
     "call-missed": F0F9,
@@ -516,6 +532,7 @@ $mdi-icons: (
     "cellphone-lock": F94E,
     "cellphone-message": F8D2,
     "cellphone-off": F94F,
+    "cellphone-screenshot": FA34,
     "cellphone-settings": F123,
     "cellphone-settings-variant": F950,
     "cellphone-sound": F951,
@@ -543,6 +560,7 @@ $mdi-icons: (
     "check-all": F12D,
     "check-circle": F5E0,
     "check-circle-outline": F5E1,
+    "check-decagram": F790,
     "check-outline": F854,
     "checkbox-blank": F12E,
     "checkbox-blank-circle": F12F,
@@ -598,6 +616,8 @@ $mdi-icons: (
     "circle-small": F9DE,
     "cisco-webex": F145,
     "city": F146,
+    "city-variant": FA35,
+    "city-variant-outline": FA36,
     "clipboard": F147,
     "clipboard-account": F148,
     "clipboard-alert": F149,
@@ -611,6 +631,7 @@ $mdi-icons: (
     "clipboard-pulse": F85C,
     "clipboard-pulse-outline": F85D,
     "clipboard-text": F14E,
+    "clipboard-text-outline": FA37,
     "clippy": F14F,
     "clock": F953,
     "clock-alert": F954,
@@ -641,6 +662,7 @@ $mdi-icons: (
     "cloud-outline": F163,
     "cloud-print": F165,
     "cloud-print-outline": F166,
+    "cloud-question": FA38,
     "cloud-search": F955,
     "cloud-search-outline": F956,
     "cloud-sync": F63F,
@@ -681,6 +703,8 @@ $mdi-icons: (
     "comment-arrow-right-outline": F9E3,
     "comment-check": F17F,
     "comment-check-outline": F180,
+    "comment-eye": FA39,
+    "comment-eye-outline": FA3A,
     "comment-multiple": F85E,
     "comment-multiple-outline": F181,
     "comment-outline": F182,
@@ -692,6 +716,8 @@ $mdi-icons: (
     "comment-question-outline": F186,
     "comment-remove": F5DE,
     "comment-remove-outline": F187,
+    "comment-search": FA3B,
+    "comment-search-outline": FA3C,
     "comment-text": F188,
     "comment-text-multiple": F85F,
     "comment-text-multiple-outline": F860,
@@ -704,6 +730,9 @@ $mdi-icons: (
     "console-network": F8A8,
     "contact-mail": F18E,
     "contacts": F6CA,
+    "contain": FA3D,
+    "contain-end": FA3E,
+    "contain-start": FA3F,
     "content-copy": F18F,
     "content-cut": F190,
     "content-duplicate": F191,
@@ -835,11 +864,15 @@ $mdi-icons: (
     "disqus-outline": F1D3,
     "division": F1D4,
     "division-box": F1D5,
+    "dlna": FA40,
     "dna": F683,
     "dns": F1D6,
     "do-not-disturb": F697,
     "do-not-disturb-off": F698,
     "docker": F867,
+    "doctor": FA41,
+    "dog": FA42,
+    "dog-side": FA43,
     "dolby": F6B2,
     "domain": F1D7,
     "donkey": F7C1,
@@ -868,6 +901,7 @@ $mdi-icons: (
     "duck": F1E5,
     "dumbbell": F1E6,
     "ear-hearing": F7C4,
+    "ear-hearing-off": FA44,
     "earth": F1E7,
     "earth-box": F6CC,
     "earth-box-off": F6CD,
@@ -902,6 +936,8 @@ $mdi-icons: (
     "emoticon-sad": F1F8,
     "emoticon-tongue": F1F9,
     "engine": F1FA,
+    "engine-off": FA45,
+    "engine-off-outline": FA46,
     "engine-outline": F1FB,
     "equal": F1FC,
     "equal-box": F1FD,
@@ -917,6 +953,7 @@ $mdi-icons: (
     "eventbrite": F7C6,
     "evernote": F204,
     "exclamation": F205,
+    "exit-run": FA47,
     "exit-to-app": F206,
     "exponent": F962,
     "exponent-box": F963,
@@ -943,10 +980,14 @@ $mdi-icons: (
     "fast-forward-outline": F6D1,
     "fax": F212,
     "feather": F6D2,
+    "feature-search": FA48,
+    "feature-search-outline": FA49,
     "fedora": F8DA,
     "ferry": F213,
     "file": F214,
     "file-account": F73A,
+    "file-alert": FA4A,
+    "file-alert-outline": FA4B,
     "file-chart": F215,
     "file-check": F216,
     "file-cloud": F217,
@@ -981,6 +1022,8 @@ $mdi-icons: (
     "file-send": F22A,
     "file-tree": F645,
     "file-undo": F8DB,
+    "file-upload": FA4C,
+    "file-upload-outline": FA4D,
     "file-video": F22B,
     "file-word": F22C,
     "file-word-box": F22D,
@@ -1251,7 +1294,14 @@ $mdi-icons: (
     "hackernews": F624,
     "hamburger": F684,
     "hammer": F8E9,
+    "hand": FA4E,
+    "hand-okay": FA4F,
+    "hand-peace": FA50,
+    "hand-peace-variant": FA51,
+    "hand-pointing-down": FA52,
+    "hand-pointing-left": FA53,
     "hand-pointing-right": F2C7,
+    "hand-pointing-up": FA54,
     "hanger": F2C8,
     "hard-hat": F96E,
     "harddisk": F2CA,
@@ -1272,6 +1322,8 @@ $mdi-icons: (
     "heart-half": F6DE,
     "heart-half-full": F6DD,
     "heart-half-outline": F6DF,
+    "heart-multiple": FA55,
+    "heart-multiple-outline": FA56,
     "heart-off": F758,
     "heart-outline": F2D5,
     "heart-pulse": F5F6,
@@ -1310,6 +1362,7 @@ $mdi-icons: (
     "hook": F6E1,
     "hook-off": F6E2,
     "hops": F2DF,
+    "horseshoe": FA57,
     "hospital": F2E0,
     "hospital-building": F2E1,
     "hospital-marker": F2E2,
@@ -1321,11 +1374,17 @@ $mdi-icons: (
     "human": F2E6,
     "human-child": F2E7,
     "human-female": F649,
+    "human-female-boy": FA58,
+    "human-female-female": FA59,
+    "human-female-girl": FA5A,
     "human-greeting": F64A,
     "human-handsdown": F64B,
     "human-handsup": F64C,
     "human-male": F64D,
+    "human-male-boy": FA5B,
     "human-male-female": F2E8,
+    "human-male-girl": FA5C,
+    "human-male-male": FA5D,
     "human-pregnant": F5CF,
     "humble-bundle": F743,
     "ice-cream": F829,
@@ -1366,6 +1425,8 @@ $mdi-icons: (
     "instapaper": F2FF,
     "internet-explorer": F300,
     "invert-colors": F301,
+    "ip": FA5E,
+    "ip-network": FA5F,
     "islam": F978,
     "itunes": F676,
     "jeepney": F302,
@@ -1465,6 +1526,7 @@ $mdi-icons: (
     "linkedin-box": F33C,
     "linux": F33D,
     "linux-mint": F8EC,
+    "litecoin": FA60,
     "loading": F771,
     "lock": F33E,
     "lock-alert": F8ED,
@@ -1492,8 +1554,10 @@ $mdi-icons: (
     "magnify": F349,
     "magnify-close": F97F,
     "magnify-minus": F34A,
+    "magnify-minus-cursor": FA61,
     "magnify-minus-outline": F6EB,
     "magnify-plus": F34B,
+    "magnify-plus-cursor": FA62,
     "magnify-plus-outline": F6EC,
     "mail-ru": F34C,
     "mailbox": F6ED,
@@ -1533,6 +1597,8 @@ $mdi-icons: (
     "menu-left-outline": FA01,
     "menu-right": F35F,
     "menu-right-outline": FA02,
+    "menu-swap": FA63,
+    "menu-swap-outline": FA64,
     "menu-up": F360,
     "menu-up-outline": F6B6,
     "message": F361,
@@ -1891,6 +1957,7 @@ $mdi-icons: (
     "publish": F6A6,
     "pulse": F430,
     "puzzle": F431,
+    "puzzle-outline": FA65,
     "qi": F998,
     "qqchat": F605,
     "qrcode": F432,
@@ -1931,6 +1998,7 @@ $mdi-icons: (
     "reflect-vertical": FA0E,
     "refresh": F450,
     "regex": F451,
+    "registered-trademark": FA66,
     "relative-scale": F452,
     "reload": F453,
     "reminder": F88B,
@@ -1946,6 +2014,7 @@ $mdi-icons: (
     "reply": F45A,
     "reply-all": F45B,
     "reproduction": F45C,
+    "resize": FA67,
     "resize-bottom-right": F45D,
     "responsive": F45E,
     "restart": F708,
@@ -1974,6 +2043,7 @@ $mdi-icons: (
     "rotate-right-variant": F468,
     "rounded-corner": F607,
     "router-wireless": F469,
+    "router-wireless-settings": FA68,
     "routes": F46A,
     "rowing": F608,
     "rss": F46B,
@@ -1981,6 +2051,7 @@ $mdi-icons: (
     "ruler": F46D,
     "run": F70D,
     "run-fast": F46E,
+    "safe": FA69,
     "sale": F46F,
     "salesforce": F88D,
     "sass": F7EB,
@@ -1995,6 +2066,7 @@ $mdi-icons: (
     "scanner": F6AA,
     "scanner-off": F909,
     "school": F474,
+    "scissor-cutting": FA6A,
     "screen-rotation": F475,
     "screen-rotation-lock": F476,
     "screwdriver": F477,
@@ -2020,9 +2092,11 @@ $mdi-icons: (
     "security-off": F99D,
     "select": F485,
     "select-all": F486,
+    "select-drag": FA6B,
     "select-inverse": F487,
     "select-off": F488,
     "selection": F489,
+    "selection-drag": FA6C,
     "selection-off": F776,
     "send": F48A,
     "send-secure": F7EC,
@@ -2046,6 +2120,7 @@ $mdi-icons: (
     "set-top-box": F99E,
     "settings": F493,
     "settings-box": F494,
+    "settings-helper": FA6D,
     "settings-outline": F8BA,
     "shape": F830,
     "shape-circle-plus": F65D,
@@ -2080,6 +2155,7 @@ $mdi-icons: (
     "signal-2g": F711,
     "signal-3g": F712,
     "signal-4g": F713,
+    "signal-5g": FA6E,
     "signal-cellular-1": F8BB,
     "signal-cellular-2": F8BC,
     "signal-cellular-3": F8BD,
@@ -2090,6 +2166,7 @@ $mdi-icons: (
     "signal-variant": F60A,
     "silverware": F4A3,
     "silverware-fork": F4A4,
+    "silverware-fork-knife": FA6F,
     "silverware-spoon": F4A5,
     "silverware-variant": F4A6,
     "sim": F4A7,
@@ -2111,6 +2188,7 @@ $mdi-icons: (
     "slackware": F90A,
     "sleep": F4B2,
     "sleep-off": F4B3,
+    "smog": FA70,
     "smoke-detector": F392,
     "smoking": F4B4,
     "smoking-off": F4B5,
@@ -2120,6 +2198,7 @@ $mdi-icons: (
     "soccer": F4B8,
     "soccer-field": F833,
     "sofa": F4B9,
+    "solar-power": FA71,
     "solid": F68C,
     "sort": F4BA,
     "sort-alphabetical": F4BB,
@@ -2167,6 +2246,8 @@ $mdi-icons: (
     "stairs": F4CD,
     "standard-definition": F7EE,
     "star": F4CE,
+    "star-box": FA72,
+    "star-box-outline": FA73,
     "star-circle": F4CF,
     "star-circle-outline": F9A3,
     "star-face": F9A4,
@@ -2230,6 +2311,8 @@ $mdi-icons: (
     "table-large": F4F1,
     "table-merge-cells": F9A5,
     "table-of-contents": F835,
+    "table-plus": FA74,
+    "table-remove": FA75,
     "table-row": F836,
     "table-row-height": F4F2,
     "table-row-plus-after": F4F3,
@@ -2252,6 +2335,7 @@ $mdi-icons: (
     "tag-remove": F722,
     "tag-text-outline": F4FD,
     "target": F4FE,
+    "target-variant": FA76,
     "taxi": F4FF,
     "teach": F88F,
     "teamviewer": F500,
@@ -2333,6 +2417,7 @@ $mdi-icons: (
     "trackpad": F7F7,
     "trackpad-lock": F932,
     "tractor": F891,
+    "trademark": FA77,
     "traffic-light": F52B,
     "train": F52C,
     "train-variant": F8C3,
@@ -2344,6 +2429,8 @@ $mdi-icons: (
     "transition": F914,
     "transition-masked": F915,
     "translate": F5CA,
+    "trash-can": FA78,
+    "trash-can-outline": FA79,
     "treasure-chest": F725,
     "tree": F531,
     "trello": F532,
@@ -2361,8 +2448,10 @@ $mdi-icons: (
     "truck-delivery": F53E,
     "truck-fast": F787,
     "truck-trailer": F726,
-    "tshirt-crew": F53F,
-    "tshirt-v": F540,
+    "tshirt-crew": FA7A,
+    "tshirt-crew-outline": F53F,
+    "tshirt-v": FA7B,
+    "tshirt-v-outline": F540,
     "tumble-dryer": F916,
     "tumblr": F541,
     "tumblr-box": F917,
@@ -2601,5 +2690,17 @@ $mdi-icons: (
     "youtube-gaming": F847,
     "youtube-tv": F448,
     "zip-box": F5C4,
-    "zip-disk": FA22
+    "zip-disk": FA22,
+    "zodiac-aquarius": FA7C,
+    "zodiac-aries": FA7D,
+    "zodiac-cancer": FA7E,
+    "zodiac-capricorn": FA7F,
+    "zodiac-gemini": FA80,
+    "zodiac-leo": FA81,
+    "zodiac-libra": FA82,
+    "zodiac-pisces": FA83,
+    "zodiac-sagittarius": FA84,
+    "zodiac-scorpio": FA85,
+    "zodiac-taurus": FA86,
+    "zodiac-virgo": FA87
 );
